--- a/1intro/index.html
+++ b/1intro/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <title>HTML Example</title>
+  </head>
+  <body>
+    <h1>Hello HTML!</h1>
+    <p>HTML describes formatted text using <strong>tags
+      </strong>. Visit the 
+        <a href="https://softuni.bg/trainings/
+      courses">SoftUni HTML course to learn more.</a></p>
+  </body>
 </html>
