--- a/1intro/index.html
+++ b/1intro/index.html
@@ -8,7 +8,6 @@
     <h1>Hello HTML!</h1>
     <p>HTML describes formatted text using <strong>tags
       </strong>. Visit the 
-        <a href="https://softuni.bg/trainings/
-      courses">SoftUni HTML course to learn more.</a></p>
-  </body>
+        <a href="https://softuni.bg/trainings/courses">SoftUni HTML course to learn more.</a></p>
+    </body>
 </html>
