--- a/3CSS&Typography/04_Buttons-css/index.html
+++ b/3CSS&Typography/04_Buttons-css/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.10.2/css/all.css"
-    />
+    /> -->
     <link rel="stylesheet" href="./styles.css" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
