--- a/6FlexBox/02_FlexModel-Articles/index.html
+++ b/6FlexBox/02_FlexModel-Articles/index.html
@@ -5,16 +5,28 @@
     <link rel="stylesheet" href="styles.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flexbox Layout</title>
+    <title>Articles</title>
 </head>
 <body>
-    <header>HEADER</header>
-
-    <main>MAIN</main>
-
-    <aside>ASIDE</aside>
-
-    <footer>FOOTER</footer>
-    
+    <section class="container">
+        <article>
+            <h2>Some title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eligendi nemo fuga maxime amet error
+                beatae iste perferendis impedit dolor accusamus culpa, sequi, possimus quaerat nobis facere sunt atque
+                ut.</p>
+        </article>
+        <article>
+            <h2>Some title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eligendi nemo fuga maxime amet error
+                beatae iste perferendis impedit dolor accusamus culpa, sequi, possimus quaerat nobis facere sunt atque
+                ut.</p>
+        </article>
+        <article>
+            <h2>Some title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eligendi nemo fuga maxime amet error
+                beatae iste perferendis impedit dolor accusamus culpa, sequi, possimus quaerat nobis facere sunt atque
+                ut.</p>
+        </article>
+    </section>
 </body>
 </html>
