--- a/Exam/03. inTime-Company/index.html
+++ b/Exam/03. inTime-Company/index.html
@@ -75,7 +75,11 @@
     <section class="subscribe">
       <h2 class="subTitle">
         SUBSCRIBE TO OUR NEWSLETTER
+
       </h2>
+      <div class="line"></div>
+      <p>Sign up for our mailing list to get latest updates and offers.
+    </p>
       <div class="subscribe_email"><input type="email" placeholder="Email Address...">
         <button class="btn btn--primary">SUBSCRIBE</button>
       </div>
@@ -84,7 +88,7 @@
 
   </main>
 
-  <footer class="site-footer">
+  <section class="contacts">
    <ul>
        <li><a href="#">Quick Links</a></li>
    <li><a href="#">Home</a></li>
@@ -114,6 +118,9 @@
      </li>
 </ul>
    
+</section>
+<footer class="rights">
+    <p>Copyright © 2018 InTime. All Rights Reserved. <mark>InTime</mark></p>
 </footer>
 </body>
 </html>
